# varlog

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .golangci.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  Makefile  NOTICE.md  README.kr.md  README.md  bench_tq.sh  go.mod  go.sum  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backport.yaml  ci.yaml  codeql.yml  containers.yaml  release.yaml
.jenkins/: Jenkinsfile  Jenkinsfile-nightly  Jenkinsfile.master
benchmark/proto/: benchmark.pb.go  benchmark.proto  benchmark_test.go
cmd/benchmark/: benchmark.go  database.sql  initdb_command.go  main.go  save_command.go  serve_command.go  (+1 more)
docker/: def.mk  get_last_tag.sh
docs/: benchmark.md  concept.kr.md  design.md  management.md  overview.kr.md  storage_node.kr.md  storage_node_implementation.md  varlog.pptx
githooks/: README.md  pre-commit
reports/: .gitignore
scripts/: benchmark.sh  dockerize.sh  fmt.sh  gogoproto.sh  golang.sh  grpcui_admin.sh  grpcui_mr.sh  grpcui_sn.sh  install_golang.sh  install_protoc.sh  protobuf.sh  release.sh  rpc_test.sh
sequencer/: CMakeLists.txt  sequencer.cc  sequencer.h  sequencer_service.cc
test/: etcd_metadata_repository_test.go  marshal_test.go  metadata_repository_client_test.go  mr_connector_test.go  mrconnector_test.go  simple_end2end_test.go  testenv.go  varlog_cluster_test.go
testdata/: testdata.go
tests/: lint_test.go  marshal_test.go
tools/: tools.go
vtesting/: init.go
(+1321 files in other folders)
